tomcat/tomcat-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec: 
  type: NodePort
  ports:
  - port: 8080
    nodePort: 31002
  selector:
    tier: frontend
