tomcat/tomcat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec: 
  ports:
  - port: 8080
  selector:
    tier: frontend
